# unlock-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MetaAdsReachAndImpresionsMar1to18.xlsx  Unlock-Alabama-System-Design.docx  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: api-perf.yml  auth-e2e.yml  canvas-api.yml  canvas-e2e.yml  canvas-ui-e2e.yml  ci.yml  deploy.yml  live-api-verification.yml  post-deploy-smoke.yml  release.yml  sync-env.yml  temporal-smoke.yml  upstash-preview.yml
Mockups/: AccountPage.md  AltSingleViewPage.md  CommentChatpanel.md  CreateViewModal.md  ShareDialog.md  SinglePanelEdit.md  SingleViewEdit.md  SingleViewPage.md  ViewsPage.md
apps/canvas/: package-lock.json  package.json  vitest.config.ts
apps/canvas/src/: instrumentation-client.ts  middleware.ts  proxy.ts
apps/canvas/src/__tests__/: helpers.ts  setup.ts
apps/canvas/src/__tests__/mocks/: auth.ts  fetch.ts  hoisted.ts  supabase.ts  temporal.ts
apps/canvas/src/app/: dashboard-client.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  sign-out-button.tsx
apps/canvas/src/app/account/: page.tsx
apps/canvas/src/app/admin/: layout.tsx
apps/canvas/src/app/login/: page.tsx
apps/canvas/src/app/unauthorized/: page.tsx
apps/canvas/src/components/admin/: file-upload.tsx  pipeline-form.tsx  schedule-modal.tsx  schema-form.tsx  source-form.tsx
apps/canvas/src/components/charts/: area-chart.tsx  bar-chart.tsx  chart-renderer.tsx  funnel-chart.tsx  line-chart.tsx  metric-card.tsx  pie-chart.tsx
apps/canvas/src/components/chat/: chat-panel.tsx  message-bubble.tsx  online-presence.tsx  typing-indicator.tsx
apps/canvas/src/components/dashboard/: add-panel-button.tsx  add-panel-modal.tsx  edit-toolbar.tsx  panel-card.tsx  panel-editor.tsx  panel-grid.tsx
apps/canvas/src/components/data/: data-table.tsx
apps/canvas/src/components/nav/: header-bar.tsx  section-button.tsx  side-nav.tsx  user-avatar.tsx
apps/canvas/src/components/ui/: skeleton.tsx
apps/canvas/src/components/views/: create-view-card.tsx  create-view-modal.tsx  share-dialog.tsx  view-card.tsx
apps/canvas/src/hooks/: use-view.ts  use-views.ts
apps/canvas/src/lib/: transform-data.ts
apps/canvas/src/lib/auth/: session.ts
apps/canvas/src/lib/redis/: client.ts  configs.ts  (+3 more)
apps/canvas/src/types/: platform.ts
example/: PRE-1-requirements-detailed-design.md
scripts/: api_perf_test.py  auth_e2e_test.py  canvas_api_test.py  canvas_e2e_test.py  canvas_ui_e2e_test.py  enable_check_suites.py  manage_upstash.py  poll_railway_deploy.py  push_env_to_railway.py  verify_infra.py
scripts/fixtures/: meta_ads_test_data.csv
supabase/: config.toml  seed.sql
supabase/migrations/: 20260211224215_create_unlock_schema.sql  20260214_create_engagement_graph.sql  20260225_create_lm_calls.sql  20260318_create_data_sources.sql
tasks/: lessons.md  todo.md
workers/: Dockerfile  pyproject.toml
workers/src/unlock_workers/: __init__.py  __main__.py  registry.py  runner.py
workers/tests/: test_registry.py
(+39 files in other folders)
