[project]
name = "unlock-platform"
version = "0.1.0"
description = "Unlock Alabama Data Platform — civic data transformation and analytics"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.uv.workspace]
members = ["packages/*", "workers"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["packages", "workers"]
asyncio_mode = "auto"
