[project]
name = "unlock-workers"
version = "0.1.0"
description = "Unified worker runner — component selected at runtime via CLI argument"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.9.0",
    "unlock-shared",
    "unlock-data-manager",
    "unlock-transform-engine",
    "unlock-schema-engine",
    "unlock-access-engine",
    "unlock-source-access",
    "unlock-data-access",
    "unlock-config-access",
    "unlock-llm-gateway",
    "unlock-scheduler",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.uv.sources]
unlock-shared = { workspace = true }
unlock-data-manager = { workspace = true }
unlock-transform-engine = { workspace = true }
unlock-schema-engine = { workspace = true }
unlock-access-engine = { workspace = true }
unlock-source-access = { workspace = true }
unlock-data-access = { workspace = true }
unlock-config-access = { workspace = true }
unlock-llm-gateway = { workspace = true }
unlock-scheduler = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unlock_workers"]
